--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
 .black {
     background-color: black;
-    padding-top: 20px;
+    padding-top: 40px;
 }
 .boutonPlacer {
 
@@ -35,7 +35,7 @@
 
 }
 
-.select {
+.liste {
 
     height: 20px;
     width: 100px;
