--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 .body-all {
     font-family: 'Varela Round', sans-serif;
     background-color: #E8E6E6;
@@ -15,52 +14,18 @@
 .black {
     background-color: black;
     padding-top: 40px;
-}
-.boutonPlacer {
-
-    background-color: orangered;
-    border: none;
-    color: #000000;
-    padding: 15px 32px;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 8px;
-
+    height: 75px;
 
 }
 
-.BoutonInitialiser {
-
-    background-color: orangered;
-    border: black;
-    color: #000000;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 8px;
-
-
-}
-
-.buttonselect {
-
-    background-color: orangered;
-    border: none;
-    color: #000000;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    border-radius: 8px;
-}
 
 .liste {
 
     display: inline-block;
+
+
+
 }
 
 
